fix: adjust list spacing

--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -28,6 +28,8 @@ aside :where(label, .list-btn-wrapper) {
   padding: 0px 1.5rem;
 }
 
+.inner-system-list-wrapper,
+.inner-mylist-wrapper,
 .system-list-wrapper,
 .mylist-wrapper {
   display: grid;
@@ -38,7 +40,7 @@ aside :where(label, .list-btn-wrapper) {
   grid-auto-rows: min-content;
 }
 
-.system-list-wrapper {
+.inner-system-list-wrapper {
   margin-bottom: var(--list-gap);
 }
 
